--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "plv/plv",
     "description": "Programming language version check tool",
     "keywords": ["cli", "programming language", "version"],
+    "homepage": "https://github.com/isam/plv",
     "authors": [
        {
            "name": "Isamu Nagoya",
@@ -13,9 +14,17 @@
         "fabpot/goutte": "v1.0.1",
         "symfony/console": "v2.3.1"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "autoload": {
         "psr-0": {
             "Plv": "src/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1.0-dev"
         }
     }
 }
