--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     "require": {
         "php": ">=5.3.3",
         "fabpot/goutte": "v1.0.1",
-        "symfony/console": "v2.3.1"
+        "symfony/console": "v2.3.1",
+        "symfony/finder": "2.2",
+        "symfony/process": "2.3.7"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
